# destor

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile.am  Makefile.in  README.md  configure  configure.ac  destor.config  rebuild
doc/: README.md
scripts/: benchmark.sh  cache.sh  caf.sh  cost.sh  destor.config  edll.sh  edpl.sh  hybrid.sh  interplay.sh  ndll.sh  ndll_spv.sh  ndpl.sh  restore.sh
src/: Makefile.am  Makefile.in  assembly_restore.c  backup.h  cap_rewrite.c  cbr_rewrite.c  cfl_rewrite.c  chunk_phase.c  cma.c  cma.h  config.c  data_record.txt  dedup_phase.c  destor.c  destor.h  do_backup.c  do_delete.c  do_restore.c  filter_phase.c  har_rewrite.c  hash_phase.c  jcr.c  jcr.h  law_restore.c  law_restore.h  optimal_restore.c  read_phase.c  restore.h  restore_aware.c  rewrite_phase.c  rewrite_phase.h  trace_phase.c
src/chunking/: Makefile.am  Makefile.in  ae_chunking.c  chunking.h  fascdc_chunking.c  rabin_chunking.c
src/fsl/: Makefile.am  Makefile.in  libhashfile.c  libhashfile.h  read_fsl_trace.c
src/index/: Makefile.am  Makefile.in  ctxtTable.c  ctxtTable.h  fingerprint_cache.c  fingerprint_cache.h  index.c  index.h  index_buffer.h  kvstore.c  kvstore.h  kvstore_htable.c  lipa_cache.c  lipa_cache.h  sampling_method.c  segmenting_method.c  similarity_detection.c
src/recipe/: Makefile.am  Makefile.in  recipestore.c  recipestore.h
src/storage/: Makefile.am  Makefile.in  containerstore.c  containerstore.h
src/utils/: Makefile.am  Makefile.in  bloom_filter.c  bloom_filter.h  lru_cache.c  lru_cache.h  priority_cache.c  priority_cache.h  queue.c  queue.h  sds.c  sds.h  serial.c  serial.h  sync_queue.c  sync_queue.h
